@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.13)
+cmake_minimum_required(VERSION 3.14)
 project(Cppcheck VERSION 2.18.99 LANGUAGES CXX)
 
 include(cmake/options.cmake)
@@ -11,6 +11,7 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 include(GNUInstallDirs)
+include(CTest)
 
 include(cmake/compilerCheck.cmake)
 include(cmake/versions.cmake)
@@ -76,10 +77,6 @@ endif()
 # - "tags" target
 # - Cygwin handling
 # - MinGW handling
-
-if(BUILD_TESTS)
-    enable_testing()
-endif()
 
 add_custom_target(copy_cfg ALL
     ${CMAKE_COMMAND} -E copy_directory "${PROJECT_SOURCE_DIR}/cfg"
