@@ -3,7 +3,7 @@ if(BUILD_GUI)
     if(WITH_QCHART)
         list(APPEND qt_components Charts)
     endif()
-    if(BUILD_TESTS)
+    if(BUILD_TESTING)
         list(APPEND qt_components Test)
     endif()
     find_package(Qt6 COMPONENTS ${qt_components} REQUIRED)
