@@ -57,13 +57,24 @@ if(BUILD_CORE_DLL AND NOT MSVC)
     message(FATAL_ERROR "Building of lib as DLL is only supported with Visual Studio")
 endif()
 option(BUILD_TESTS          "Build tests"                                                   OFF)
+if(DEFINED BUILD_TESTS)
+    message(WARNING "BUILD_TESTS has been deprecated and will be removed in Cppcheck 2.22 - please use BUILD_TESTING instead")
+    if(DEFINED BUILD_TESTING)
+        message(WARNING "BUILD_TESTS and BUILD_TESTING have been defined at the same time - ignoring BUILD_TESTS")
+    else()
+        set(BUILD_TESTING "${BUILD_TESTS}")
+    endif()
+elseif(NOT DEFINED BUILD_TESTING)
+    # disable tests by default - TODO: remove this
+    set(BUILD_TESTING OFF)
+endif()
 option(REGISTER_TESTS       "Register tests in CTest"                                       ON)
 option(ENABLE_CHECK_INTERNAL "Enable internal checks"                                       OFF)
 option(DISABLE_DMAKE        "Disable run-dmake dependencies"                                OFF)
 option(BUILD_MANPAGE        "Enable man target to build manpage"                            OFF)
 
 option(BUILD_CLI            "Build the CLI application"                                     ON)
-if(NOT BUILD_CLI AND BUILD_TESTS)
+if(NOT BUILD_CLI AND BUILD_TESTING)
     message(FATAL_ERROR "Building the tests requires the CLI to be build as well")
 endif()
 
