@@ -52,7 +52,8 @@ endif()
 message(STATUS "LIBXML2_XMLLINT_EXECUTABLE = ${LIBXML2_XMLLINT_EXECUTABLE}")
 message(STATUS "BUILD_CORE_DLL =        ${BUILD_CORE_DLL}")
 message(STATUS "BUILD_TESTS =           ${BUILD_TESTS}")
-if(BUILD_TESTS)
+message(STATUS "BUILD_TESTING =         ${BUILD_TESTING}")
+if(BUILD_TESTS OR BUILD_TESTING)
     message(STATUS "REGISTER_TESTS =        ${REGISTER_TESTS}")
 endif()
 message(STATUS "ENABLE_CHECK_INTERNAL = ${ENABLE_CHECK_INTERNAL}")
