@@ -87,7 +87,7 @@ CheckOptions:
         add_dependencies(cppcheck-gui run-dmake)
     endif()
 
-    if (BUILD_TESTS)
+    if (BUILD_TESTING)
         add_subdirectory(test)
     endif()
 endif()
